--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>com.epam.tal5.khalii.driver</groupId>
     <artifactId>WebDriverTask</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -18,6 +17,11 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8.21</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.detro.ghostdriver</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
