--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.epam.tal5.khalii.driver</groupId>
-    <artifactId>WebDriverTask</artifactId>
+    <groupId>MySelenium</groupId>
+    <artifactId>MySelenium</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -18,11 +19,8 @@
             <artifactId>testng</artifactId>
             <version>6.8.21</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.detro.ghostdriver</groupId>
-            <artifactId>phantomjsdriver</artifactId>
-            <version>1.1.0</version>
-        </dependency>
+
+
     </dependencies>
 
 </project>
